templates/iptables.rules
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s <L2TP_CIDR> -o <INTERFACE> -j MASQUERADE
-A POSTROUTING -s <XAUTH_CIDR> -o <INTERFACE> -m policy --dir out --pol none -j MASQUERADE
COMMIT
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p udp -m udp --dport 1701 -m policy --dir in --pol none -j DROP
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m multiport --dports 500,4500 -j ACCEPT
-A INPUT -p udp -m udp --dport 1701 -m policy --dir in --pol ipsec -j ACCEPT
-A INPUT -p udp -m udp --dport 1701 -j DROP
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -i <INTERFACE> -o ppp+ -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ppp+ -o <INTERFACE> -j ACCEPT
-A FORWARD -s <L2TP_CIDR> -d <L2TP_CIDR> -i ppp+ -o ppp+ -j ACCEPT
-A FORWARD -d <XAUTH_CIDR> -i <INTERFACE> -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s <XAUTH_CIDR> -o <INTERFACE> -j ACCEPT
-A FORWARD -j DROP
COMMIT
